[package]
name = "slingshot"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "SystemVerilog LSP"
readme = "README.md"
license = "MPL-2.0"
# for now
publish = false

[dependencies]
sv-parser = "0.13.1"
tower-lsp = "0.19.0"
tokio = { version = "1.28.2", features = ["full"] }
# serde, flexbuffers and sqlite will be used for index caching
# note we compile and statically link rusqlite with the slingshot binary which is in fact what we want
serde = "1.0.164"
flexbuffers = "2.0.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
tempfile = "3.6.0"
regex = "1.8.4"
lazy_static = "1.4.0"
log = "0.4.19"
#simple_logger = "4.2.0"
stderrlog = "0.5.4"
tokio-rusqlite = "0.4.0"
ropey = "1.6.0"
bytesize = "1.2.0"
color-backtrace = "0.5.1"
flexi_logger = "0.25.5"

[profile.dev]
lto = "thin"

[profile.release]
lto = "thin"
