[package]
name = "slingshot"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "SystemVerilog LSP"
readme = "README.md"
license = "MPL-2.0"
# for now
publish = false

[dependencies]
sv-parser = "0.13.1"
tower-lsp = "0.19.0"
tokio = { version = "1.28.2", features = ["full", "process"] }
serde = "1.0.164"
flexbuffers = "2.0.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
tempfile = "3.6.0"
regex = "1.8.4"
lazy_static = "1.4.0"
log = "0.4.19"
#ropey = "1.6.0" # TODO: use this, it seems good!
bytesize = "1.2.0"
color-backtrace = "0.5.1"
dashmap = { version = "5.4.0", features = ["serde"]}
anyhow = { version = "1.0.71", features = ["backtrace"]}
thiserror = "1.0.43"
fern = { version = "0.6.2", features = ["colored"]}
humantime = "2.1.0"
log-panics = { version = "2", features = ["with-backtrace"]}

[profile.dev]
lto = "thin"

[profile.release]
lto = "thin"
